src/objects/datamask__Masking_Object__mdt.object
<CustomObject>
    <fields>
        <fullName>datamask__API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Batch_Data__c</fullName>
        <label>Batch Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>datamask__Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__DataMask_Configuration__c</fullName>
        <label>DataMask Configuration</label>
        <referenceTo>datamask__DataMask_Configuration__mdt</referenceTo>
        <relationshipLabel>Masking Objects</relationshipLabel>
        <relationshipName>Masking_Objects</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>datamask__Last_Prepped_Date__c</fullName>
        <label>Last Prepped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datamask__Master_Object__c</fullName>
        <label>Master Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Number_of_Fields__c</fullName>
        <label>Number of Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datamask__Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datamask__Run_In_Poly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run In Poly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Run_In_Serial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run In Serial</label>
        <type>Checkbox</type>
    </fields>
    <label>Masking Object</label>
    <pluralLabel>Masking Objects</pluralLabel>
</CustomObject>